# jappeaceApplication

./: .gitignore  .gitmodules  build.gradle  build.sh  default.nix  emacs.nix  kilserver.sh  makefile  pelicanconf.py  publish.sh  publishconf.py  python-packages.nix  quotes.yaml  readme.org  requirements.txt  server.sh  shake.nix  shakefile.hs  shell.nix  startserver.sh
content/: 2020-overview.md  Jappie.hs  ann-hatter.md  ann-hsmin.md  ann-ram.md  ann-unwitch.md  assimilating-maths.md  authentication-in-reflex.md  back-to-netherlands.md  blockchain-scalability.md  bounds-to-cabal.md  browser-cache-and-single-page-apps.md  cabal-exact-print.md  chagnes.org  citrix-notes.md  citrix.md  comment-fetcher.md  comment-fetcher.org  comment-test.org  comonads-monads.md  compare.org  compiling-haskell-on-windows.md  death-to-typeclasses.md  deployment-and-todos.md  distro-hoppin.org  elmgl.md  endorsements.org  esqueleto-ann.md  esqueleto-postgis-ann.md  ethernal-summer.md  ethernal-summer.org  failing-in-haskell.md  firmware-sins.md  first.md  flask-docker-backend.md  followup-followup-releasing-software.md  followup-releasing.md  fullstack-haskell-reflex-servant.md  fun-with-stack.md  ghcid-for-multi-proj-builds.md  (+84 more)
content-nl/: back-to-netherlands.md  haskell-vibes.md
fire/: campfire.css  index.html  main.css
jesiska/: index.html  style.css
lisp/: config.el  pelican-html.el
nix/: ci.nix  (+6 more)
shake/: Feed.hs  Metadata.hs  PageChrome.hs  PenguinTemplates.hs  Shakefile.hs  Slug.hs  Templates.hs  Types.hs  WebwinkelTemplates.hs  default.nix  shake.cabal
shake/test/: Test.hs
(+90 files in other folders)
