cabal-version:      3.0
name:               shake-blog
version:            0.1.0
license:            MIT
author:             Jappie Klooster
maintainer:         hi@jappie.me
build-type:         Simple

executable shake-blog
  main-is:          Shakefile.hs
  other-modules:
    Feed
    Metadata
    Slug
    Templates
    Types
  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:
    -O2 -Wall -Werror
    -threaded -rtsopts "-with-rtsopts=-N"
  build-depends:
      base >=4.9 && <4.22
    , blaze-html >=0.9 && <0.10
    , blaze-markup >=0.8 && <0.9
    , bytestring >=0.10 && <0.13
    , containers >=0.6 && <0.8
    , directory >=1.3 && <1.5
    , filepath >=1.4 && <1.6
    , http-types >=0.12 && <0.13
    , pandoc >=3.0 && <3.8
    , shake >=0.19 && <0.20
    , text >=1.2 && <2.2
    , time >=1.9 && <1.15
    , wai >=3.2 && <3.3
    , wai-app-static >=3.1 && <3.2
    , warp >=3.3 && <3.5
